changed text, fixed sound

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,8 +16,8 @@
     "my_account" : "MY ACCOUNT",
     "select_language" : "APP LANGUAGE",
      "already_exists" : "This word already exists in the list & cannot be added again",
-     "less_than_3" : "This word has less than 3 characters, please recheck the word.",
-     "select_language_game" : "Select Language for this game",
+     "less_than_3" : "Word should be between 3 to 14 Characters!",
+     "select_language_game" : "LANGUAGE OF THE GAME TO CREATE",
     "back" : "Back",
 
     "publication_mode" : "Publication mode",
@@ -25,8 +25,8 @@
     "privet" : "Private",
     "fixed" : "Fixed",
     "dynam" : "Dynamic",
-    "enter_name_of_the_word_search" : "Enter a name for your word search",
-    "enter_word" : "Enter word",
+    "enter_name_of_the_word_search" : "Name of the Word Search",
+    "enter_word" : "Enter word (3 to 14 characters)",
     "add" : "Add",
     "generate" : "Generate",
     "delete_game":"Are you sure you want to delete the game?",
@@ -43,10 +43,10 @@
     "end_game":"Are you sure you want to end the game?",
     "search" : "Search",
     "random_word_search" : "Random word search",
-    "word_search_categories" : "Word search categories",
+    "word_search_categories" : "WORD SEARCH BY CATEGORIES",
     "random_challenge" : "Random Challenge",
     "challenge_by_category" : "Challenge by category",
-    "play_by_entering_code" : "Play by code",
+    "play_by_entering_code" : "PLAY BY ENTERING CODE",
     "enter_code" : "Enter code",
     "play_with_entered_code" : "Play with the entered code",
     "created_success":"Game Created Successfully",
@@ -54,7 +54,7 @@
         "duplicated_success": "Game Duplicated Successfully",
                 "deleted_success": "Game Deleted Successfully",
     "categories" : "Categories",
-    "word_search_name" : "Word Search Name",
+    "word_search_name" : "Word Search",
     "select_level" : "Select Level",
     "easy" : "Easy",
     "medium" : "Medium",
@@ -72,31 +72,31 @@
     "current_plan" : "Current plan",
     "addword": "Add some word",
     "remaining_game_of_day" : "Games remaining for today",
-    "upgrade" : "Upgrade",
+    "upgrade" : "Upgrade now!",
 
     "only_mark_the_words_related_to" : "Only mark the words\nrelated to",
     "continuee" : "Continue",
 
     "add_free" : "Ad free",
-    "unlimited_match" : "Unlimited daily matches",
-    "many_more_topics" : "Many more topics to choose from",
-    "share_your" : "Share your created games withoutlimits",
+    "unlimited_match" : "Unlimited daily games",
+    "many_more_topics" : "Unlimited categories",
+    "share_your" : "Share with no limits, all your games created",
     "levels_available" : "5 levels available instead of only  2",
-    "create_dynamic" : "Create dynamic Word searches",
+    "create_dynamic" : "Create dynamic Word Search",
     "create_challenges" : "Create challenges",
-    "create_privet" : "Create private word seaches and challenges.",
+    "create_privet" : "Create dynamic Challenges",
     "premium_benifits" : "PREMIUM BENEFITS",
     "monthly" : "MONTHLY $99 / month",
     "annual" : "ANNUAL $89 / month (Save 10%)",
-
+    "game_lang" : "Game Language",
     "maximum_word_length" : "Maximum Word Length",
     "maximum_word_length_description" : "The maximum allowance for the length of a word is 14 letters.",
-    "dynamic_word_search" : "What is a dynamic word search?",
-    "dynamic_word_search_description" : "A dynamic word search is one in which the grid is different for each player. In addition, the creator can select the number of words that will be displayed in the word search.",
-      "dynamic_word_challenge" : "What is a fixed challenge and a dynamic challenge?",
-        "dynamic_word_challenge_description" : "A fixed challenge is when the words are displayed in the same location in the game for all users. The dynamic challenge shows each player the game's words in different locations.",
-    "what_is_challenge" : "What is a challenge?",
-    "what_is_challenge_description" : "In a challenge, there are correct and incorrect words in the list and in the grid. You should only mark the words that correspond to the title of the challenge. For example, if the title of the challenge is: European Countries, you should only mark the European countries, those that are not from Europe should not be marked as they would be incorrect.",
+    "dynamic_word_search" : "What is a FIXED or a DYNAMIC Word Search?",
+    "dynamic_word_search_description" : "A FIXED Word Search is the one that, when shared through a code, is generated showing the same words and in the same arrangement for all users. While a DYNAMIC Word Search is the one in which each user who receives the shared code will generate a game with a different layout and, if so arranged by the creator, with a specific number of words, from a word list created by him.",
+      "dynamic_word_challenge" : "What is a FIXED or a DYNAMIC Challenge?",
+        "dynamic_word_challenge_description" : "A FIXED Challenge is the one that, when shared through a code, is generated showing the same words and in the same arrangement for all users. While a DYNAMIC Challenge is the one in which each user who receives the shared code will generate a game with a different layout and, if so arranged by the creator, with a specific number of words, from a word list created by him.",
+    "what_is_challenge" : "What is a CHALLENGE?",
+    "what_is_challenge_description" : "In a CHALLENGE, are shown words related to the theme of the game (correct) as well as words unconnected to it (incorrect). To solve a CHALLENGE you must find and mark the correct words in the Word Search grid, avoiding marking the incorrect ones. For example, if the title of the challenge is: 'European Countries', only the countries of this continent should be marked, omitting countries outside Europe or even any words unrelated to this topic.",
     "this_feature" : "This feature is only available for premium users. Upgrade to use this feature.",
     "correct" :"Correct",
         "incorrect" :"Incorrect",
@@ -115,12 +115,12 @@
      "users":"Users",
      "code_copied": "Share code copied!",
       "words_no": "Cannot add more than 18 words in the game!",
-    "wordcount":"Word Count",
-    "wordlimit_":"Word should be of 14 or less than 14 characters.",
+    "wordcount":"Words to display",
+    "wordlimit_":"Word should be between 3 to 14 Characters!",
     "wrongcode":"Invalid share code entered. Please try again!",
     "nogame":"No game available to play!",
     "words_limit":"You can't add more than 6 words in free plan.",
-    "game_limit": "You have reached the today game limit.",
+    "game_limit": "You have reached the game limit for today.",
     "see_leaderboard" : "See leaderboard",
     "startNew_game" : "Start new game",
     "reached_limit": "Cannot play this game as it has already reached the limit",
@@ -130,8 +130,8 @@
        "active":"ACTIVE",
          "inactive":"INACTIVE",
          "privacy_policy":"Privacy Policy",
-      "publicprivate": "What is a public or private word search?",
-        "publicprivatedesc": "A private Word search can be played by anyone using the app; private ones can only be played through a shared code.",
+      "publicprivate": "What is a PUBLIC or PRIVATE Game?",
+        "publicprivatedesc": "A PUBLIC Game is the one that any user can play, while a PRIVATE one can only be played by receiving a shared code.",
     "ratings" : "Ratings"
 
 }
