--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -13,16 +13,16 @@
     "my_account" : "Mi cuenta",
     "select_language" : "IDIOMA DE LA APP",
      "already_exists" : "Esta palabra ya existe en la lista y no se puede volver a agregar",
-     "less_than_3" : "Esta palabra tiene menos de 3 caracteres, vuelva a verificar la palabra.",
+     "less_than_3" : "¡SÓLO PALABRAS DE ENTRE 3 Y 14 CARACTERES!",
     "back" : "Regresar",
 
     "publication_mode" : "Modo de publicación",
-    "public" : "Público",
-    "privet" : "Privada",
-    "fixed" : "Fijo",
+    "public" : "Pública",
+    "privet" : "Privado",
+    "fixed" : "Fija",
     "dynam" : "Dinámico",
-    "enter_name_of_the_word_search" : "Ingrese el nombre de la sopa de letras",
-    "enter_word" : "Ingrese la palabra",
+    "enter_name_of_the_word_search" : "Nombre de la Sopa de Letras",
+    "enter_word" : "Ingrese la palabra (3 a 14 caracteres)",
     "add" : "Agregar",
     "generate" : "Generar",
     "delete_game":"¿Estás seguro de que quieres eliminar el juego?",
@@ -33,26 +33,26 @@
     "word_search_title" : "Nombre de la sopa de letras",
     "words" : "Palabras",
     "users" : "Usuarios",
-    "leaderboard" : "Tabla de clasificación",
+    "leaderboard" : "Clasificación",
     "duplicate" : "Duplicado",
     "create_word_search" : "Crear sopa de letras",
 
     "search" : "Buscar",
-    "random_word_search" : "SOPA DE LETRAS AL AZAR",
+    "random_word_search" : "SOPA DE LETRAS ALEATORIA",
     "word_search_categories" : "SOPAS DE LETRAS POR TEMA",
-    "random_challenge" : "RETO AL AZAR",
+    "random_challenge" : "RETO ALEATORIO",
     "challenge_by_category" : "RETO POR TEMA",
-    "play_by_entering_code" : "Juega por código",
-    "enter_code" : "Introduzca el código",
-    "play_with_entered_code" : "Juega con el código ingresado",
+    "play_by_entering_code" : "JUGAR USANDO CÓDIGO",
+    "enter_code" : "Introduce el código",
+    "play_with_entered_code" : "JUEGAR CON CÓDIGO INGRESADO",
 
     "categories" : "Categorías",
-    "word_search_name" : "Nombre de la sopa de letras",
+    "word_search_name" : "Sopa de Letras",
     "select_level" : "Selecciona el nivel",
     "easy" : "Fácil",
     "medium" : "Medio",
     "advanced" : "Avanzado",
-    "hard" : "Duro",
+    "hard" : "DIFÍCIL",
     "expert" : "Experto",
 
     "username" : "Nombre de usuario",
@@ -64,33 +64,33 @@
         "addword": "Agrega una palabra",
            "select_language_game" : "Seleccionar idioma para este juego",
     "remaining_game_of_day" : "Partidas restantes por hoy",
-    "upgrade" : "Hazte Premium",
+    "upgrade" : "¡Hazte Premium ahora!",
 
     "only_mark_the_words_related_to" : "Solo marca las palabras\nrelacionadas con",
     "continuee" : "Continuar",
-
     "add_free" : "Libre de anuncios",
-    "unlimited_match" : "Partidos diarios ilimitados",
-    "many_more_topics" : "Muchos más temas para elegir",
-    "share_your" : "Comparte tus juegos creados sin límites",
-    "levels_available" : "5 niveles disponibles en lugar de solo 2",
-    "create_dynamic" : "Crear búsquedas de palabras dinámicas",
+    "unlimited_match" : "Juegos diarios ilimitados",
+    "many_more_topics" : "Categorías ilimitadas",
+    "share_your" : "Comparte sin límites todos tus juegos creados",
+    "levels_available" : "5 niveles disponibles de juego, en lugar de solo 2",
+    "create_dynamic" : "Crear Desafíos dinámicos",
     "create_challenges" : "Crea desafíos",
-    "create_privet" : "Cree búsquedas de palabras y desafíos privados.",
+    "create_privet" : "Crear Desafíos privados",
     "premium_benifits" : "BENEFICIOS PREMIUM",
     "monthly" : "MENSUAL $99 / mes",
     "annual" : "ANUAL $89 / mes (Ahorra 10%)",
 
     "maximum_word_length" : "Longitud máxima de palabra",
     "maximum_word_length_description" : "La asignación máxima para la longitud de una palabra es de 14 letras.",
-    "dynamic_word_search" : "¿Qué es una búsqueda dinámica de palabras?",
-    "dynamic_word_search_description" : "Una sopa de letras dinámica es aquella en la que la cuadrícula es diferente para cada jugador. Además, el creador puede seleccionar la cantidad de palabras que se mostrarán en la búsqueda de palabras.",
+    "dynamic_word_search" : "¿Qué es una Sopa de Letras FIJA o DINÁMICA?",
+    "dynamic_word_search_description" : "Una Sopa de Letras FIJA es aquella que, al ser compartida mediante un código, se genera mostrando las mismas palabras y en la misma disposición para todos los usuarios. Mientras que una DINÁMICA es aquella en la que cada usuario que recibe el código compartido, generará un juego con una disposición diferente y, si así lo dispone el creador, con un numero específico de palabras, preteneciente a una lista de palabras creada por éste.",
       "dynamic_word_challenge" : "¿Qué es un reto fijo y un reto dinámico?",
             "dynamic_word_challenge_description" : "Un reto fijo es cuando las palabras se muestran en el misma ubicación en el juego para todos los usuarios. El reto dinámico muestras a cada jugador en distintas ubicaciones las palabras del juego.",
-    "what_is_challenge" : "¿Qué es un desafío?",
-    "what_is_challenge_description" : "En un desafío, hay palabras correctas e incorrectas en la lista y en la cuadrícula. Solo debes marcar las palabras que correspondan al título del reto. Por ejemplo, si el título del reto es: Países Europeos, solo se deben marcar los países europeos, los que no son de Europa no se deben marcar ya que serían incorrectos.",
+    "what_is_challenge" : "¿Qué es un RETO?",
+    "what_is_challenge_description" : "En un RETO, se muestran tanto palabras relacionadas con el tema del juego (correctas), como ajenas a éste (incorrectas). Para solucionatr un RETO deberás encontrar y marcar en la Sopa de Letras las palabras correctas, evitando marcar las incorrectas. Por ejemplo, si el título del reto es: 'Países Europeos', solo se deben marcar los países de este continente, omitiendo países fuera de Europa o incluso cualquier palabras ajena a este tema.",
     "this_feature" : "Esta característica solo está disponible para usuarios premium. Actualice para usar esta función.",
     "hits":"Aciertos",
+        "game_lang" : "Idioma Juego",
     "rate_this" : "CALAIFICAR ESTA SOPA DE LETRAS",
     "rate_this_challange" : "CALAIFICAR ESTE RETO",
     "game" : "JUEGO",
@@ -117,12 +117,12 @@
         "code_copied": "Después de copiar",
      "words_no": "¡No se pueden agregar más de 18 palabras en el juego!",
     "wordcount":"Palabra0s a desplegar",
-      "wordlimit_":"Las palabras deben ser menores a 14 caracteres.",
+      "wordlimit_":"¡SÓLO PALABRAS DE ENTRE 3 Y 14 CARACTERES!",
      "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
     "nogame":"¡No hay ningún juego disponible para jugar!",
-    "game_limit": "Has alcanzado el límite de juego de hoy.",
+    "game_limit": "Has alcanzado el límite de juegos por hoy.",
     "words_limit":"No puedes agregar más de 6 palabras en el plan gratuito.",
-    "see_leaderboard" : "Ver tabla de posiciones",
+    "see_leaderboard" : "Ver clasificación",
     "startNew_game" : "Empezar juego nuevo",
        "reached_limit": "No puedo jugar a este juego porque ya ha alcanzado el límite.",
   "created_success":"Juego creado existosamente",
@@ -130,8 +130,8 @@
       "duplicated_success": "Duplicado exitosamente",
        "deleted_success": "Juego eliminado con éxito",
       "no_search_found": "No hay resultado,por favor  intenta con otras palabras.",
-       "publicprivate": "¿Qué es una sopa de letras pública o privada?",
-              "publicprivatedesc": "Una Word search privada la puede jugar cualquier persona que use la app, las privadas solamente se puede jugar por medio de un código compartido.",
+       "publicprivate": "¿Qué es un Reto PÚBLICO o PRIVADO?",
+              "publicprivatedesc": "Un Reto PÚBLICO es aquel que cualquier usuario puede jugar, mientras que uno PRIVADO es el que sólo se puede jugar al recibir un código compartido.",
     "ratings" : "Clasificación"
 
 }
