updated code, added back btn, numbers avoid in create game

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,20 +11,24 @@
     "word_search" : "WORD SEARCH",
     "challenge" : "CHALLENGE",
     "level" : "Level",
-    
+    "numbers_warning": "Numbers are not allowed to be entered.",
     "options" : "Options",
     "my_account" : "MY ACCOUNT",
-    "select_language" : "APP LANGUAGE",
+    "select_language" : "App Language",
      "already_exists" : "This word already exists in the list & cannot be added again",
      "less_than_3" : "Word should be between 3 to 14 Characters!",
      "select_language_game" : "LANGUAGE OF THE GAME TO CREATE",
     "back" : "Back",
 
     "publication_mode" : "Publication mode",
-    "public" : "Public",
-    "privet" : "Private",
-    "fixed" : "Fixed",
-    "dynam" : "Dynamic",
+    "public_search" : "Public",
+    "public_challenge" : "Public",
+    "privet_search" : "Private",
+    "privet_challenge" : "Private",
+    "fixed_search" : "Fixed",
+    "fixed_challenge" : "Fixed",
+    "dynam_search" : "Dynamic",
+    "dynam_challenge" : "Dynamic",
     "enter_name_of_the_word_search" : "Name of the Word Search",
     "enter_word" : "Enter word (3 to 14 characters)",
     "add" : "Add",
@@ -116,7 +120,7 @@
      "code_copied": "Share code copied!",
       "words_no": "Cannot add more than 18 words in the game!",
     "wordcount":"Words to display",
-    "wordlimit_":"Word should be between 3 to 14 Characters!",
+    "wordlimit_":"ONLY WORDS BETWEEN 3 AND 14 CHARACTERS!",
     "wrongcode":"Invalid share code entered. Please try again!",
     "nogame":"No game available to play!",
     "words_limit":"You can't add more than 6 words in free plan.",
@@ -130,8 +134,10 @@
        "active":"ACTIVE",
          "inactive":"INACTIVE",
          "privacy_policy":"Privacy Policy",
-      "publicprivate": "What is a PUBLIC or PRIVATE Game?",
-        "publicprivatedesc": "A PUBLIC Game is the one that any user can play, while a PRIVATE one can only be played by receiving a shared code.",
+      "publicprivate_search": "What is a PUBLIC or PRIVATE Word Search?",
+        "publicprivatedesc_search": "A PUBLIC Word Search is the one that any user can play, while a PRIVATE one can only be played by receiving a shared code.",
+         "publicprivate_challenge": "What is a PUBLIC or PRIVATE Challenge?",
+                "publicprivatedesc_challenge": "A PUBLIC Challenge is the one that any user can play, while a PRIVATE one can only be played by receiving a shared code.",
     "ratings" : "Ratings"
 
 }
