--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -15,12 +15,16 @@
      "already_exists" : "Esta palabra ya existe en la lista y no se puede volver a agregar",
      "less_than_3" : "¡SÓLO PALABRAS DE ENTRE 3 Y 14 CARACTERES!",
     "back" : "Regresar",
-
+    "numbers_warning": "No está permitido ingresar números.",
     "publication_mode" : "Modo de publicación",
-    "public" : "Pública",
-    "privet" : "Privado",
-    "fixed" : "Fija",
-    "dynam" : "Dinámico",
+    "public_search" : "Pública",
+    "public_challenge" : "Público",
+    "privet_search" : "Privada",
+    "privet_challenge" : "Privado",
+    "fixed_search" : "Fija",
+    "fixed_challenge" : "Fijo",
+    "dynam_search" : "Dinámica",
+    "dynam_challenge" : "Dinámico",
     "enter_name_of_the_word_search" : "Nombre de la Sopa de Letras",
     "enter_word" : "Ingrese la palabra (3 a 14 caracteres)",
     "add" : "Agregar",
@@ -44,7 +48,7 @@
     "challenge_by_category" : "RETO POR TEMA",
     "play_by_entering_code" : "JUGAR USANDO CÓDIGO",
     "enter_code" : "Introduce el código",
-    "play_with_entered_code" : "JUEGAR CON CÓDIGO INGRESADO",
+    "play_with_entered_code" : "JUGAR CON CÓDIGO INGRESADO",
 
     "categories" : "Categorías",
     "word_search_name" : "Sopa de Letras",
@@ -62,7 +66,7 @@
     "premium" : "Premium",
     "current_plan" : "Plan actual",
         "addword": "Agrega una palabra",
-           "select_language_game" : "Seleccionar idioma para este juego",
+           "select_language_game" : "IDIOMA DEL JUEGO A CREAR",
     "remaining_game_of_day" : "Partidas restantes por hoy",
     "upgrade" : "¡Hazte Premium ahora!",
 
@@ -83,11 +87,11 @@
     "maximum_word_length" : "Longitud máxima de palabra",
     "maximum_word_length_description" : "La asignación máxima para la longitud de una palabra es de 14 letras.",
     "dynamic_word_search" : "¿Qué es una Sopa de Letras FIJA o DINÁMICA?",
-    "dynamic_word_search_description" : "Una Sopa de Letras FIJA es aquella que, al ser compartida mediante un código, se genera mostrando las mismas palabras y en la misma disposición para todos los usuarios. Mientras que una DINÁMICA es aquella en la que cada usuario que recibe el código compartido, generará un juego con una disposición diferente y, si así lo dispone el creador, con un numero específico de palabras, preteneciente a una lista de palabras creada por éste.",
-      "dynamic_word_challenge" : "¿Qué es un reto fijo y un reto dinámico?",
-            "dynamic_word_challenge_description" : "Un reto fijo es cuando las palabras se muestran en el misma ubicación en el juego para todos los usuarios. El reto dinámico muestras a cada jugador en distintas ubicaciones las palabras del juego.",
+    "dynamic_word_search_description" : "Una Sopa de Letras FIJA es aquella que, al ser compartida mediante un código, se genera mostrando las mismas palabras y en la misma disposición para todos los usuarios. Mientras que una DINÁMICA es aquella en la que cada usuario que recibe el código compartido, generará un juego con una disposición diferente y, si así lo dispone el creador, con un numero específico de palabras, perteneciente a una lista de palabras creada por éste.",
+    "dynamic_word_challenge" : "¿Qué es un Reto FIJO o DINÁMICO?",
+    "dynamic_word_challenge_description" : "Un Reto FIJO es aquel que, al ser compartido mediante un código, se genera mostrando las mismas palabras y en la misma disposición para todos los usuarios. Mientras que uno DINÁMICO es aquel en el que cada usuario que recibe el código compartido, generará un juego con una disposición diferente y, si así lo dispone el creador, con un numero específico de palabras, preteneciente a una lista de palabras creada por éste.",
     "what_is_challenge" : "¿Qué es un RETO?",
-    "what_is_challenge_description" : "En un RETO, se muestran tanto palabras relacionadas con el tema del juego (correctas), como ajenas a éste (incorrectas). Para solucionatr un RETO deberás encontrar y marcar en la Sopa de Letras las palabras correctas, evitando marcar las incorrectas. Por ejemplo, si el título del reto es: 'Países Europeos', solo se deben marcar los países de este continente, omitiendo países fuera de Europa o incluso cualquier palabras ajena a este tema.",
+    "what_is_challenge_description" : "En un RETO, se muestran tanto palabras relacionadas con el tema del juego (correctas), como ajenas a éste (incorrectas). Para solucionar un RETO deberás encontrar y marcar en la Sopa de Letras las palabras correctas, evitando marcar las incorrectas. Por ejemplo, si el título del reto es: 'Países Europeos', solo se deben marcar los países de este continente, omitiendo países fuera de Europa o incluso cualquier palabras ajena a este tema.",
     "this_feature" : "Esta característica solo está disponible para usuarios premium. Actualice para usar esta función.",
     "hits":"Aciertos",
         "game_lang" : "Idioma Juego",
@@ -116,7 +120,7 @@
      "users":"Usuarios",
         "code_copied": "Después de copiar",
      "words_no": "¡No se pueden agregar más de 18 palabras en el juego!",
-    "wordcount":"Palabra0s a desplegar",
+    "wordcount":"Palabras a desplegar",
       "wordlimit_":"¡SÓLO PALABRAS DE ENTRE 3 Y 14 CARACTERES!",
      "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
     "nogame":"¡No hay ningún juego disponible para jugar!",
@@ -129,9 +133,11 @@
       "edited_success":"Actualizado exitosamente",
       "duplicated_success": "Duplicado exitosamente",
        "deleted_success": "Juego eliminado con éxito",
-      "no_search_found": "No hay resultado,por favor  intenta con otras palabras.",
-       "publicprivate": "¿Qué es un Reto PÚBLICO o PRIVADO?",
-              "publicprivatedesc": "Un Reto PÚBLICO es aquel que cualquier usuario puede jugar, mientras que uno PRIVADO es el que sólo se puede jugar al recibir un código compartido.",
+   "no_search_found": "No hay resultado,por favor  intenta con otras palabras.",
+   "publicprivate_search": "¿Qué es una Sopa de Letras PÚBLICA o PRIVADA?",
+     "publicprivatedesc_search": "Una Sopa de Letras PÚBLICA es aquella que cualquier usuario puede jugar, mientras que una PRIVADA es la que sólo se puede jugar al recibir un código compartido.",
+      "publicprivate_challenge": "¿Qué es un Reto PÚBLICO o PRIVADO?",
+      "publicprivatedesc_challenge": "Un Reto PÚBLICO es aquel que cualquier usuario puede jugar, mientras que uno PRIVADO es el que sólo se puede jugar al recibir un código compartido.",
     "ratings" : "Clasificación"
 
 }
